<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">

   
    
    <TableLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >
        <TableRow 
            android:layout_marginTop="5dp" >

            <Button
                android:id="@+id/open"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="OPEN" />

            <Button
                android:id="@+id/close"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="CLOSE" />
		</TableRow>
	  </TableLayout>
       <TableLayout 
            android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
            >
            
        <TableRow
            >
            
            <TextView 
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="IP"
                />
            
            <EditText 
                android:id="@+id/IP"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:text="http://10.4.4.124:8000/gmp"
                />
        
        </TableRow>
        <TableRow
            android:layout_marginTop="5dp"
            >
            
            <TextView 
                android:id="@+id/versionx"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/version"
                />
            
            <EditText 
                android:id="@+id/version"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                />
        
        </TableRow>
        
          <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/band" />

            <Spinner
                android:id="@+id/band_spinner"
                android:layout_width="230dp"
                android:layout_height="@dimen/rm_6c_et_height"
                android:layout_weight="4"
                android:gravity="left" />
        </TableRow>
        
         <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/dmin" />

            <Spinner
                android:id="@+id/min_spinner"
                android:layout_width="230dp"
                android:layout_height="@dimen/rm_6c_et_height"
                android:layout_weight="4"
                android:gravity="left" />
        </TableRow>
        
       <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" >

            <TextView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/dmax" />

            <Spinner
                android:id="@+id/max_spinner"
                android:layout_width="230dp"
                android:layout_height="@dimen/rm_6c_et_height"
                android:layout_weight="4"
                android:gravity="left" />
        </TableRow>
        
        <TableRow
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView 
               android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/power"
                />
            
            <Spinner
                android:id="@+id/power_spinner"
                android:layout_width="230dp"
                android:layout_height="@dimen/rm_6c_et_height"
                android:layout_weight="4"
                android:gravity="left" />
        </TableRow>
        
      
        </TableLayout>
         <TableLayout
             android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">    
         <TableRow
            android:layout_marginTop="10dp"
            >
            <Button 
                android:id="@+id/pro_read"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="Read"
                />
            
            <Button 
                android:id="@+id/pro_setting"
                android:layout_width="100dp"
                android:layout_height="40dp"
                 android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="Set"
                />
        </TableRow>
        
    </TableLayout>
    
</LinearLayout>
